@@ -35,8 +35,7 @@
     android:id="@+id/quantity"
     style="@style/Widget.Grocy.TextView.ListItem.Description"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:singleLine="true" />
+    android:layout_height="wrap_content" />
 
   <TextView
     android:id="@+id/variable_amount"
